--- a/project-3/style.css
+++ b/project-3/style.css
@@ -321,3 +321,35 @@ body {
     width:20%;
 }
 
+.eleven{
+    background:red;
+    color:ghostwhite;
+    font-family:share tech mono;
+    font-size:10px;
+    letter-spacing:1px;
+    text-align:center;
+    margin-top:-10%;
+    margin-left:20%;
+    width:10%;
+}
+
+.twelve{
+    background: linear-gradient(90deg, yellow,orangered,chartreuse,rosybrown);
+    font-family:share tech mono;
+    font-size:10px;
+    letter-spacing:1px;
+    text-align:center;
+    width:20%;
+    margin-top:30%;
+    margin-left: 40%;
+}
+
+.page-8{
+    background:ghostwhite;
+    font-family:share tech mono;
+    font-size:12px;
+    text-align:right;
+    width:50%;
+    margin-left:40%;
+    line-height: 1.6;
+}
